--- a/src/css/customstyles.css
+++ b/src/css/customstyles.css
@@ -185,6 +185,9 @@ body.nav-active .nav__list-item:nth-child(3) {
 body.nav-active .nav__list-item:nth-child(4) {
   transition-delay: 0.9s;
 }
+body.nav-active .nav__list-item:nth-child(5) {
+  transition-delay: 1s;
+}
 body.nav-active p {
   transition-delay: 0.9s;
 }
