--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 
-  <div id="feed" class="animate__animated animate__fadeIn p-2 grid grid-cols-3 grid-rows-11 auto-rows-max gap-2">
+  <div id="feed" class="animate__animated animate__fadeIn p-2 grid grid-cols-3 grid-rows-11 auto-rows-max gap-2 text-white">
 
     <div class="tile bg-red-200 row-span-3 overflow-hidden cursor-pointer" style="background:url(img/about-jumbotron.jpg); background-size:cover; background-position: center;">
       <video autoplay muted loop id="myVideo">
