--- a/site/layouts/partials/contact-form.html
+++ b/site/layouts/partials/contact-form.html
@@ -2,18 +2,18 @@
 <div class="mb4">
   <h4 class="text-4xl py-5 normal-case">Fancy a chat?</h4>
 
-  <form action="" class="border border-solid border-white mb-3">
+  <form action="" class="border border-solid mb-3">
     <div class="w-full flex flex-wrap mb-2">
       <!-- Name -->
       <div class="w-1/2">
-        <fieldset class="border-b border-solid border-white p-3">
+        <fieldset class="border-b border-solid p-3">
           <label for="name" class="uppercase font-semibold">Name</label>
           <input type="text" id="name" name="name" placeholder="Name" class="w-full bg-transparent text-xxs pt-1">
         </fieldset>
       </div>
       <!-- Email -->
       <div class="w-1/2">
-        <fieldset class="border-b border-l border-solid border-white p-3">
+        <fieldset class="border-b border-l border-solid p-3">
           <label for="email" class="uppercase font-semibold">Email</label>
           <input type="email" id="email" name="email" placeholder="Email" class="w-full bg-transparent text-xxs pt-1">
         </fieldset>
