--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -7,6 +7,14 @@
     <link href="{{ relURL . }}" rel="stylesheet">
   {{ end }}
 
+  <script>
+    if (localStorage.theme === 'dark' || (!'theme' in localStorage && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
+        document.querySelector('html').classList.add('dark')
+    } else if (localStorage.theme === 'dark') {
+        document.querySelector('html').classList.add('dark')
+    }
+  </script>
+
   <!-- Animate CSS -->
   <link
     rel="stylesheet"
