--- a/site/layouts/jobs/list.html
+++ b/site/layouts/jobs/list.html
@@ -9,12 +9,12 @@
         <li class="text-gray-900 mb-1 bg-aqua">
           <a href="{{.Permalink}}">
 
-            <div class="px-3 py-2 text-4xl normal-case border-b border-solid border-gray-900">
+            <div class="px-3 py-2 text-4xl normal-case border-b border-solid">
               {{.Title}}
             </div>
 
             <div class="w-full flex flex-wrap">
-              <div class="w-1/2 border-r border-solid border-gray-900 px-3 py-2">
+              <div class="w-1/2 border-r border-solid px-3 py-2">
                 {{.Params.jobType}}
               </div>
               <div class="w-1/2 px-3 py-2">
