--- a/site/layouts/work/list.html
+++ b/site/layouts/work/list.html
@@ -6,7 +6,7 @@
       <a href="{{.Permalink}}" class="w-1/3 p-1">
 
         <div class="h-64 relative group" style="background:url({{.Params.image}}); background-size:cover; background-position: center;">
-          <div class="overlay-text opacity-0 group-hover:opacity-100 transition-all text-4xl mix-blend-difference text-center leading-none">
+          <div class="text-white overlay-text opacity-0 group-hover:opacity-100 transition-all text-4xl mix-blend-difference text-center leading-none">
             {{ .Title }}
           </div>
         </div>
