--- a/src/css/customstyles.css
+++ b/src/css/customstyles.css
@@ -1,3 +1,11 @@
+html {
+  @apply bg-gray-100;
+}
+
+html.dark {
+  @apply bg-gray-900;
+}
+
 body {
   font-family: 'Roboto Mono', monospace;
   font-weight: 300;
@@ -62,6 +70,11 @@ nav {
 
 .sun {
   animation: rotation 10s infinite linear;
+  fill: #FD5715;
+}
+
+.nav-active .sun {
+  fill: #16FFBD;
 }
 
 #menu:hover .sun {
