responsive design and converted css to scss

--- a/site/layouts/jobs/single.html
+++ b/site/layouts/jobs/single.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
 
 <div class="animate__animated animate__fadeIn">
-  <div class="max-w-3xl mx-auto pt-20 pb-10">
+  <div class="max-w-3xl 2xl:max-w-5xl mx-auto pt-20 pb-10 px-5">
 
     <div class="mb-10">
       <h1 class="text-4xl normal-case">{{.Title}}</h1>
