--- a/site/layouts/partials/contact-form.html
+++ b/site/layouts/partials/contact-form.html
@@ -8,14 +8,14 @@
       <div class="w-1/2">
         <fieldset class="border-b border-solid p-3">
           <label for="name" class="uppercase font-semibold">Name</label>
-          <input type="text" id="name" name="name" placeholder="Name" class="w-full bg-transparent text-xxs pt-1">
+          <input type="text" id="name" name="name" placeholder="Jules Winnfield" class="w-full bg-transparent pt-1">
         </fieldset>
       </div>
       <!-- Email -->
       <div class="w-1/2">
         <fieldset class="border-b border-l border-solid p-3">
           <label for="email" class="uppercase font-semibold">Email</label>
-          <input type="email" id="email" name="email" placeholder="Email" class="w-full bg-transparent text-xxs pt-1">
+          <input type="email" id="email" name="email" placeholder="jules@example.com" class="w-full bg-transparent pt-1">
         </fieldset>
       </div>
     </div>
@@ -23,7 +23,7 @@
     <!-- Message -->
     <fieldset class="p-3">
       <label for="message" class="uppercase font-semibold">Message</label>
-      <textarea id="message" name="message" placeholder="Tell us about yourself" rows="7" class="w-full bg-transparent text-xxs pt-1"></textarea>
+      <textarea id="message" name="message" placeholder="Tell us about yourself" rows="7" class="w-full bg-transparent pt-1"></textarea>
     </fieldset>
   </form>
   <!-- Button -->
