--- a/site/layouts/section/contact.html
+++ b/site/layouts/section/contact.html
@@ -2,7 +2,7 @@
 
 <div class="animate__animated animate__fadeIn w-full flex flex-wrap p-1">
 
-		<div class="max-w-3xl mx-auto py-20 normal-case markdown">
+		<div class="max-w-3xl 2xl:max-w-5xl mx-auto py-20 normal-case markdown">
 			{{ .Content }}
 
 			{{ partial "contact-form" . }}
