--- a/site/layouts/_default/baseof.html
+++ b/site/layouts/_default/baseof.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html class="transition-all" lang="{{ $.Site.Language.Lang }}">
   {{ partial "head" . }}
-  <body class="text-xxs uppercase text-gray-900 dark:text-white bg-gray-100 dark:bg-gray-900 tracking-wide transition-all">
+  <body class="text-sm uppercase text-gray-900 dark:text-white bg-gray-100 dark:bg-gray-900 tracking-wide transition-all">
 
     {{ partial "nav" . }}
 
