--- a/site/layouts/_default/single.html
+++ b/site/layouts/_default/single.html
@@ -1,6 +1,7 @@
 {{ define "main" }}
 
-{{ partial "jumbotron" (dict "imageUrl" "/img/7.jpg" "title" "This is where the heading goes" "subtitle" "This is where the subtitle goes") }}
-{{ .Content }}
+<div class="max-w-3xl 2xl:max-w-5xl mx-auto pt-20 markdown">
+  {{ .Content }}
+</div>
 
 {{ end }}
