--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -1,8 +1,24 @@
 {{ define "main" }}
 
-  <div id="feed" class="animate__animated animate__fadeIn p-2 grid grid-cols-3 grid-rows-11 auto-rows-max gap-2 text-white">
+  <div class="animate__animated animate__fadeIn w-full flex flex-wrap p-1 md:hidden">
+    {{ range (where site.RegularPages "Section" "work").ByDate.Reverse }}
 
-    <div class="tile bg-red-200 row-span-3 overflow-hidden cursor-pointer" style="background:url(img/about-jumbotron.jpg); background-size:cover; background-position: center;">
+        <a href="{{.Permalink}}" class="w-full md:w-1/3 p-1">
+
+          <div class="h-64 relative group" style="background:url({{.Params.image}}); background-size:cover; background-position: center;">
+            <div class="text-white overlay-text opacity-0 group-hover:opacity-100 transition-all text-4xl mix-blend-difference text-center leading-none">
+              {{ .Title }}
+            </div>
+          </div>
+
+        </a>
+
+    {{ end }}
+  </div>
+
+  <div id="feed" class="hidden md:grid animate__animated animate__fadeIn p-2 grid-cols-3 grid-rows-11 auto-rows-max gap-2 text-white">
+
+    <div class="tile bg-aqua col-span-3 md:col-span-1 row-span-3 overflow-hidden cursor-pointer">
       <video autoplay muted loop id="myVideo">
         <source src="img/Trabaco_Sundew_RnD_Feed.mp4" type="video/mp4">
       </video>
@@ -10,7 +26,7 @@
 
     <a
       href="{{ (index (where site.RegularPages "Section" "work") 0).Permalink }}"
-      class="tile bg-red-200 col-span-2 row-span-2 overflow-hidden cursor-pointer group relative"
+      class="tile bg-aqua col-span-3 md:col-span-2 row-span-2 overflow-hidden cursor-pointer group relative"
       style="background:url({{ (index (where site.RegularPages "Section" "work") 0).Params.image }}); background-size:cover; background-position: center;">
       <div class="overlay-text opacity-0 group-hover:opacity-100 transition-all text-4xl mix-blend-difference text-center leading-none">
         {{ (index (where site.RegularPages "Section" "work") 0).Title }}
@@ -19,14 +35,14 @@
 
     <a
       href="{{ (index (where site.RegularPages "Section" "work") 1).Permalink }}"
-      class="tile bg-red-200 row-span-3 overflow-hidden cursor-pointer group relative"
+      class="tile bg-aqua col-span-3 md:col-span-1 row-span-3 overflow-hidden cursor-pointer group relative"
       style="background:url({{ (index (where site.RegularPages "Section" "work") 1).Params.image }}); background-size:cover; background-position: center;">
       <div class="overlay-text opacity-0 group-hover:opacity-100 transition-all text-4xl mix-blend-difference text-center leading-none">
         {{ (index (where site.RegularPages "Section" "work") 1).Title }}
       </div>
     </a>
 
-    <div class="tile bg-red-200 row-span-2 overflow-hidden cursor-pointer" style="background:url(img/about-jumbotron.jpg); background-size:cover; background-position: center;">
+    <div class="tile bg-aqua col-span-3 md:col-span-1 row-span-2 overflow-hidden cursor-pointer">
       <video autoplay muted loop id="myVideo">
         <source src="img/Say_when.mp4" type="video/mp4">
       </video>
@@ -34,7 +50,7 @@
 
     <a
       href="{{ (index (where site.RegularPages "Section" "work") 2).Permalink }}"
-      class="tile bg-red-200 row-span-2 overflow-hidden cursor-pointer group relative"
+      class="tile bg-aqua col-span-3 md:col-span-1 row-span-2 overflow-hidden cursor-pointer group relative"
       style="background:url({{ (index (where site.RegularPages "Section" "work") 2).Params.image }}); background-size:cover; background-position: center;">
       <div class="overlay-text opacity-0 group-hover:opacity-100 transition-all text-4xl mix-blend-difference text-center leading-none">
         {{ (index (where site.RegularPages "Section" "work") 2).Title }}
@@ -43,28 +59,28 @@
 
     <a
       href="{{ (index (where site.RegularPages "Section" "work") 3).Permalink }}"
-      class="tile bg-red-200 row-span-2 overflow-hidden cursor-pointer group relative"
+      class="tile bg-aqua col-span-3 md:col-span-1 row-span-2 overflow-hidden cursor-pointer group relative"
       style="background:url({{ (index (where site.RegularPages "Section" "work") 3).Params.image }}); background-size:cover; background-position: center;">
       <div class="overlay-text opacity-0 group-hover:opacity-100 transition-all text-4xl mix-blend-difference text-center leading-none">
         {{ (index (where site.RegularPages "Section" "work") 3).Title }}
       </div>
     </a>
 
-    <div class="tile bg-red-200 col-span-2 row-span-2 overflow-hidden cursor-pointer" style="background:url(img/nb.png); background-size:cover; background-position: center;">
+    <div class="tile bg-aqua col-span-3 md:col-span-2 row-span-2 overflow-hidden cursor-pointer">
       <video autoplay muted loop id="myVideo">
         <source src="img/USC_snkredit_1080p.mp4" type="video/mp4">
       </video>
     </div>
 
-    <div class="tile bg-red-200 row-span-3 overflow-hidden cursor-pointer" style="background:url(img/ua.png); background-size:cover; background-position: center;">
+    <div class="tile bg-aqua col-span-3 md:col-span-1 row-span-3 overflow-hidden cursor-pointer">
       <video autoplay muted loop id="myVideo" class="video-height">
         <source src="img/Mossy_balls_loop.mp4" type="video/mp4">
       </video>
     </div>
 
-    <a
+    <a 
       href="{{ (index (where site.RegularPages "Section" "work") 4).Permalink }}"
-      class="tile bg-red-200 row-span-2 overflow-hidden cursor-pointer group relative"
+      class="tile bg-aqua col-span-3 md:col-span-1 row-span-2 overflow-hidden cursor-pointer group relative"
       style="background:url({{ (index (where site.RegularPages "Section" "work") 4).Params.image }}); background-size:cover; background-position: center;">
       <div class="overlay-text opacity-0 group-hover:opacity-100 transition-all text-4xl mix-blend-difference text-center leading-none">
         {{ (index (where site.RegularPages "Section" "work") 4).Title }}
@@ -73,14 +89,14 @@
 
     <a
       href="{{ (index (where site.RegularPages "Section" "work") 5).Permalink }}"
-      class="tile bg-red-200 row-span-2 overflow-hidden cursor-pointer group relative"
+      class="tile bg-aqua col-span-3 md:col-span-1 row-span-2 overflow-hidden cursor-pointer group relative"
       style="background:url({{ (index (where site.RegularPages "Section" "work") 5).Params.image }}); background-size:cover; background-position: center;">
       <div class="overlay-text opacity-0 group-hover:opacity-100 transition-all text-4xl mix-blend-difference text-center leading-none">
         {{ (index (where site.RegularPages "Section" "work") 5).Title }}
       </div>
     </a>
 
-    <div class="tile bg-red-200 row-span-2 overflow-hidden cursor-pointer" style="background:url(img/ua.png); background-size:cover; background-position: center;">
+    <div class="tile bg-aqua col-span-3 md:col-span-1 row-span-2 overflow-hidden cursor-pointer">
       <video autoplay muted loop id="myVideo">
         <source src="img/Glass_ball.mp4" type="video/mp4">
       </video>
@@ -88,7 +104,7 @@
 
     <a
       href="{{ (index (where site.RegularPages "Section" "work") 6).Permalink }}"
-      class="tile bg-red-200 col-span-2 row-span-2 overflow-hidden cursor-pointer group relative"
+      class="tile bg-aqua col-span-3 md:col-span-2 row-span-2 overflow-hidden cursor-pointer group relative"
       style="background:url({{ (index (where site.RegularPages "Section" "work") 6).Params.image }}); background-size:cover; background-position: center;">
       <div class="overlay-text hidden group-hover:block text-4xl mix-blend-difference text-center leading-none">
         {{ (index (where site.RegularPages "Section" "work") 6).Title }}
