--- a/site/layouts/partials/header.html
+++ b/site/layouts/partials/header.html
@@ -27,30 +27,30 @@
 <div class="nav z-40">
 	<div class="nav__content p-4 z-40 text-white">
 
-		<ul class="nav__list text-9xl italic font-semibold mb-20 leading-tight border-b border-solid border-white pb-20">
+		<ul class="nav__list text-8xl md:text-9xl italic font-semibold leading-tight pb-20">
       {{ range .Site.Menus.main }}
         <li class="nav__list-item"><a href="{{ .URL | absURL }}">{{ .Name }}</a></li>
       {{ end }}
 		</ul>
 
-    <p class="text-4xl w-full normal-case mb-20 border-b border-solid border-white pb-20">
+    <p class="text-4xl w-full normal-case mb-20 border-b border-t border-solid border-white py-20">
       {{ .Site.Params.description }}
     </p>
 
     <div class="w-full flex flex-wrap border-b border-solid border-white pb-20 mb-20">
-      <ul class="w-1/5 normal-case">
+      <ul class="w-1/2 md:w-1/3 lg:w-1/5 normal-case mb-3 md:mb-0">
         <h4 class="uppercase font-semibold mb-2">brands we bake with:</h4>
         {{ range .Site.Menus.brands }}
           <li class="mb-2">{{ .Name }}</li>
         {{ end }}
       </ul>
-      <ul class="w-1/5 normal-case">
+      <ul class="w-1/2 md:w-1/3 lg:w-1/5 normal-case">
         <h4 class="uppercase font-semibold mb-2">services:</h4>
         {{ range .Site.Menus.services }}
           <li class="mb-2">{{ .Name }}</li>
         {{ end }}
       </ul>
-      <ul class="w-1/5 normal-case">
+      <ul class="w-1/2 md:w-1/3 lg:w-1/5 normal-case">
         <li class="uppercase font-semibold mb-2">Contact:</li>
         <li>{{ .Site.Params.contact }}</li>
       </ul>
