--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -1,4 +1,4 @@
-<nav class="fixed left-0 z-10">
+<nav class="fixed left-0 z-10 hidden lg:block">
 	<ul>
     {{ range .Site.Menus.main }}
 			<li class="mb-4 group">
