--- a/site/layouts/work/list.html
+++ b/site/layouts/work/list.html
@@ -3,9 +3,9 @@
 <div class="animate__animated animate__fadeIn w-full flex flex-wrap p-1">
   {{ range (where site.RegularPages "Section" "work").ByDate.Reverse }}
 
-      <a href="{{.Permalink}}" class="w-1/3 p-1">
+      <a href="{{.Permalink}}" class="w-full md:w-1/3 p-1">
 
-        <div class="h-64 relative group" style="background:url({{.Params.image}}); background-size:cover; background-position: center;">
+        <div class="h-64 2xl:h-96 relative group" style="background:url({{.Params.image}}); background-size:cover; background-position: center;">
           <div class="text-white overlay-text opacity-0 group-hover:opacity-100 transition-all text-4xl mix-blend-difference text-center leading-none">
             {{ .Title }}
           </div>
