--- a/site/layouts/work/single.html
+++ b/site/layouts/work/single.html
@@ -15,42 +15,44 @@
       </div>
     </div>
 
-    <div class="max-w-3xl mx-auto py-10 text-4xl normal-case">
-      <p class="max-w-none">{{.Description}}</p>
+    <div class="max-w-3xl 2xl:max-w-5xl mx-auto py-10 text-4xl normal-case p-5">
+      {{.Description}}
     </div>
 
     <div class="px-5">
       <div style="padding:56.25% 0 0 0;position:relative;"><iframe src={{ .Params.video }} style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
     </div>
 
-    <div class="max-w-3xl mx-auto py-10 normal-case markdown">
+    <div class="max-w-3xl 2xl:max-w-5xl mx-auto py-10 normal-case markdown p-5">
       {{ .Content }}
     </div>
 
-    <div class="carousel pb-10 mx-auto">
+    <div class="carousel pb-10 mx-auto px-5 md:px-0">
       <div class="glide">
         <div class="glide__track" data-glide-el="track">
           <ul class="glide__slides">
             {{ range .Params.carousel }}
-              <li class="glide__slide"><img src="{{ .image }}"/></li>
+              <li class="glide__slide">
+                <img src="{{ .image }}"/>
+                <p class="pt-3">{{ .alt }}</p>
+              </li>
             {{ end }}
           </ul>
         </div>
         <div class="glide__arrows" data-glide-el="controls">
-          <button class="glide__arrow glide__arrow--left" data-glide-dir="<">prev</button>
-          <button class="glide__arrow glide__arrow--right" data-glide-dir=">">next</button>
-        </div>
-        <div class="glide__bullets" data-glide-el="controls[nav]">
-          <button class="glide__bullet" data-glide-dir="=0"></button>
-          <button class="glide__bullet" data-glide-dir="=1"></button>
-          <button class="glide__bullet" data-glide-dir="=2"></button>
+          <button class="carousel-arrow glide__arrow--left" data-glide-dir="<">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-left"><line x1="19" y1="12" x2="5" y2="12"></line><polyline points="12 19 5 12 12 5"></polyline></svg>
+          </button>
+          <button class="carousel-arrow glide__arrow--right" data-glide-dir=">">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-right"><line x1="5" y1="12" x2="19" y2="12"></line><polyline points="12 5 19 12 12 19"></polyline></svg>
+          </button>
         </div>
       </div>
     </div>
 
   </div>
 
-  <div class="flex flex-wrap max-w-3xl mx-auto py-10">
+  <div class="flex flex-wrap max-w-3xl 2xl:max-w-5xl mx-auto py-10">
     <h2 class="text-4xl normal-case mb-5 w-full">Recent Projects</h2>
     {{ range where site.RegularPages "Section" "work" | first 3 }}
       <a href="{{.Permalink}}" class="w-1/3 p-1">
@@ -62,7 +64,7 @@
     {{ end }}
   </div>
 
-  <div class="max-w-3xl mx-auto mb-10">
+  <div class="max-w-3xl 2xl:max-w-5xl mx-auto mb-10">
     {{ partial "contact-form" . }}
   </div>
 
@@ -74,9 +76,22 @@
   $('.marquee2').marquee({});
 
   new Glide('.glide', {
-    startAt: 1,
+    autoplay: 5000,
+    hoverpause: true,
     perView: 1,
-    peek: 300,
+    peek: 200,
+    startAt: 1,
+    breakpoints: {
+      600: {
+        peek: 0,
+        startAt: 0
+      },
+      1024: {
+        peek: 100,
+        startAt: 0,
+        perView: 1,
+      }
+    }
   }).mount()
 
 </script>
