--- a/site/layouts/work/single.html
+++ b/site/layouts/work/single.html
@@ -1,16 +1,16 @@
 {{ define "main" }}
 <div class="animate__animated animate__fadeIn p-2">
-  <div class="border border-solid overflow-hidden">
+  <div class="border border-solid border-gray-900 dark:border-white overflow-hidden">
 
     <div class="marquee2" data-duplicated='true' data-direction='left' data-pauseOnHover='false' data-speed='100' data-startVisible='true'>
       <span class="text-9xl font-semibold">{{.Title}}</span>
     </div>
 
-    <div class="w-full flex flex-row font-semibold border-t border-b border-solid">
+    <div class="w-full flex flex-row font-semibold border-t border-b border-gray-900 dark:border-white">
       <div class="p-5 w-1/2">
         {{ .Date.Format "Jan 2, 2006" }}
       </div>
-      <div class="p-5 w-1/2 border-l border-solid">
+      <div class="p-5 w-1/2 border-l border-solid border-gray-900 dark:border-white">
         {{ .Params.tags }}
       </div>
     </div>
@@ -23,8 +23,15 @@
       <div style="padding:56.25% 0 0 0;position:relative;"><iframe src={{ .Params.video }} style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
     </div>
 
-    <div class="max-w-3xl 2xl:max-w-5xl mx-auto py-10 normal-case markdown p-5">
-      {{ .Content }}
+    <div class="max-w-3xl 2xl:max-w-5xl mx-auto py-10 normal-case markdown p-5 flex flex-wrap">
+
+      {{ $cols := split .Content "split" }}
+
+      {{ range $cols }}
+         <div class="w-1/2 px-2">
+         {{ . }}
+         </div>
+      {{ end }}
     </div>
 
     <div class="carousel pb-10 mx-auto px-5 md:px-0">
