--- a/site/layouts/partials/header.html
+++ b/site/layouts/partials/header.html
@@ -2,7 +2,7 @@
   <a href="./"><img src="img/baked-logo.svg" alt="baked logo" class="transform hover:scale-90 transition duration-100"></a>
 </div>
 
-<div id="menu" class="z-50 pointer">
+<div id="menu" class="z-50 cursor-pointer">
   <div class="relative group transform hover:scale-90 transition duration-100">
 
     <svg class="sun" width="84" height="84" viewBox="0 0 84 84" fill="none" xmlns="http://www.w3.org/2000/svg">
