--- a/site/layouts/partials/theme-switch.html
+++ b/site/layouts/partials/theme-switch.html
@@ -3,7 +3,7 @@
 		<path class="fill-current text-gray-100 dark:text-gray-900 dark:rotate-180 transition-all" d="M30.5 22.5C30.5 18.08 26.92 14.5 22.5 14.5V30.5C26.92 30.5 30.5 26.92 30.5 22.5Z"/>
 		<path class="fill-current text-gray-100 dark:text-gray-900 dark:rotate-180 transition-all" d="M22.5 45C34.91 45 45 34.91 45 22.5C45 10.09 34.91 0 22.5 0C10.09 0 0 10.09 0 22.5C0 34.91 10.09 45 22.5 45ZM41 22.5C41 32.7 32.7 41 22.5 41V30.5C18.08 30.5 14.5 26.92 14.5 22.5C14.5 18.08 18.08 14.5 22.5 14.5V4C32.7 4 41 12.3 41 22.5Z"/>
 	</svg> -->
-	<span class="hidden dark:inline-block">Light On</span>
+	<span class="hidden dark:inline-block">Lights On</span>
 	<span class="dark:hidden">Lights Off</span>
 </button>
 
