--- a/site/layouts/work/list.html
+++ b/site/layouts/work/list.html
@@ -5,10 +5,15 @@
 
       <a href="{{.Permalink}}" class="w-full md:w-1/2 2xl:w-1/3 p-1">
 
-        <div class="h-80 2xl:h-96 relative group" style="background:url({{.Params.image}}); background-size:cover; background-position: center;">
+        <div class="h-80 2xl:h-96 relative group bg-aqua overflow-hidden" style="background:url({{.Params.image}}); background-size:cover; background-position: center;">
           <div class="text-white overlay-text opacity-0 group-hover:opacity-100 transition-all text-4xl mix-blend-difference text-center leading-none">
             {{ .Title }}
           </div>
+          {{ if .Params.thumbnailVideo }}
+            <video autoplay muted loop id="myVideo" class="thumbnail-video">
+              <source src="{{ .Params.thumbnailVideo }}" type="video/mp4">
+            </video>
+          {{ end }}
         </div>
 
       </a>
