--- a/site/layouts/work/single.html
+++ b/site/layouts/work/single.html
@@ -19,9 +19,11 @@
       {{.Description}}
     </div>
 
-    <div class="px-5">
-      <div style="padding:56.25% 0 0 0;position:relative;"><iframe src={{ .Params.video }} style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
-    </div>
+    {{ if .Params.video }}
+      <div class="px-5">
+        <div style="padding:56.25% 0 0 0;position:relative;"><iframe src={{ .Params.video }} style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+      </div>
+    {{ end }}
 
     <div class="max-w-3xl 2xl:max-w-5xl mx-auto py-10 normal-case markdown p-5 flex flex-wrap">
       {{ .Content }}
@@ -33,7 +35,17 @@
           <ul class="glide__slides">
             {{ range .Params.carousel }}
               <li class="glide__slide">
-                <img src="{{ .image }}"/>
+
+                {{ if .image }}
+                  <img src="{{ .image }}"/>
+                {{ end }}
+
+                {{ if .video }}
+                  <video autoplay muted loop id="myVideo" class="w-full">
+                    <source src="{{ .video }}" type="video/mp4">
+                  </video>
+                {{ end }}
+
                 <p class="pt-3">{{ .alt }}</p>
               </li>
             {{ end }}
