--- a/site/layouts/_default/single.html
+++ b/site/layouts/_default/single.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 
-<div class="max-w-3xl 2xl:max-w-5xl mx-auto pt-20 markdown">
+<div class="max-w-5xl mx-auto pt-20 markdown">
   {{ .Content }}
 </div>
 
