--- a/site/layouts/jobs/list.html
+++ b/site/layouts/jobs/list.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
 
 <div class="animate__animated animate__fadeIn">
-  <div class="max-w-3xl 2xl:max-w-5xl mx-auto pt-20 pb-10 jobs px-5">
+  <div class="max-w-5xl mx-auto pt-20 pb-10 jobs px-5">
 
     <ul>
       {{ range .Pages }}
