--- a/site/layouts/work/list.html
+++ b/site/layouts/work/list.html
@@ -21,7 +21,7 @@
   {{ end }}
 </div>
 
-<div class="max-w-3xl 2xl:max-w-5xl mx-auto py-10">
+<div class="max-w-5xl mx-auto py-10">
   {{ partial "contact-form" . }}
 </div>
 
