--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -50,6 +50,47 @@ p {
   }
 }
 
+#auto-feed {
+  grid-auto-rows: 200px;
+
+  a {
+    &:nth-child(10n + 1),
+    &:nth-child(10n + 3),
+    &:nth-child(10n + 8) {
+      @apply col-span-1 row-span-3;
+    }
+    &:nth-child(10n + 2),
+    &:nth-child(10n + 7) {
+      @apply col-span-2 row-span-2;
+    }
+    &:nth-child(10n + 4),
+    &:nth-child(10n + 5),
+    &:nth-child(10n + 6),
+    &:nth-child(10n + 9),
+    &:nth-child(10n + 10) {
+      @apply col-span-1 row-span-2;
+    }
+  }
+
+  @media only screen and (max-width: 1024px) {
+    a {
+      &:nth-child(10n + 1),
+      &:nth-child(10n + 2),
+      &:nth-child(10n + 3),
+      &:nth-child(10n + 4),
+      &:nth-child(10n + 5),
+      &:nth-child(10n + 6),
+      &:nth-child(10n + 7),
+      &:nth-child(10n + 8),
+      &:nth-child(10n + 9),
+      &:nth-child(10n + 10) {
+        @apply col-span-3 row-span-2;
+      }
+    }
+  }
+
+}
+
 .about-grid {
   grid-template-rows: 60px 60px 60px 60px 60px 60px 60px 60px 60px;
 
