contact form testing

--- a/site/layouts/partials/contact-form.html
+++ b/site/layouts/partials/contact-form.html
@@ -2,7 +2,7 @@
 <div class="mb4">
   <h4 class="text-4xl py-5 normal-case">Fancy a chat?</h4>
 
-  <form action="" class="border border-solid border-gray-900 dark:border-white mb-3">
+  <form name="contact" method="POST" data-netlify="true" class="border border-solid border-gray-900 dark:border-white mb-3">
     <div class="w-full flex flex-wrap mb-2">
       <!-- Name -->
       <div class="w-1/2">
