--- a/site/layouts/partials/contact-form.html
+++ b/site/layouts/partials/contact-form.html
@@ -5,13 +5,39 @@
   <form name="contact" method="POST" data-netlify="true" class="border border-solid border-gray-900 dark:border-white mb-3">
     <div class="w-full flex flex-wrap mb-2">
       <!-- Name -->
+      <div class="w-1/2 border-b border-solid border-gray-900 dark:border-white p-3">
+          <label for="name" class="uppercase font-semibold">Name</label>
+          <input type="text" id="name" name="name" placeholder="Jules Winnfield" class="w-full bg-transparent pt-1">
+      </div>
+      <!-- Email -->
+      <div class="w-1/2 border-b border-l border-solid border-gray-900 dark:border-white p-3">
+          <label for="email" class="uppercase font-semibold">Email</label>
+          <input type="email" id="email" name="email" placeholder="jules@example.com" class="w-full bg-transparent pt-1">
+      </div>
+    </div>
+
+    <!-- Message -->
+    <div class="p-3">
+      <label for="message" class="uppercase font-semibold">Message</label>
+      <textarea id="message" name="message" placeholder="Tell us about yourself" rows="7" class="w-full bg-transparent pt-1"></textarea>
+    </div>
+
+    <!-- Button -->
+    <div class="">
+      <button type="submit" class="text-center p-3 text-4xl bg-primary shadow-lg">Send Message</button>
+    </div>
+  </form>
+
+  <!-- <form name="contact" method="POST" data-netlify="true" class="border border-solid border-gray-900 dark:border-white mb-3">
+    <div class="w-full flex flex-wrap mb-2">
+
       <div class="w-1/2">
         <fieldset class="border-b border-solid border-gray-900 dark:border-white p-3">
           <label for="name" class="uppercase font-semibold">Name</label>
           <input type="text" id="name" name="name" placeholder="Jules Winnfield" class="w-full bg-transparent pt-1">
         </fieldset>
       </div>
-      <!-- Email -->
+
       <div class="w-1/2">
         <fieldset class="border-b border-l border-solid border-gray-900 dark:border-white p-3">
           <label for="email" class="uppercase font-semibold">Email</label>
@@ -20,14 +46,16 @@
       </div>
     </div>
 
-    <!-- Message -->
+
     <fieldset class="p-3">
       <label for="message" class="uppercase font-semibold">Message</label>
       <textarea id="message" name="message" placeholder="Tell us about yourself" rows="7" class="w-full bg-transparent pt-1"></textarea>
     </fieldset>
-  </form>
-  <!-- Button -->
-  <div class="">
-    <button type="submit" class="text-center p-3 text-4xl bg-primary shadow-lg">Send Message</button>
-  </div>
+
+
+    <div class="">
+      <button type="submit" class="text-center p-3 text-4xl bg-primary shadow-lg">Send Message</button>
+    </div>
+  </form> -->
+
 </div>
