--- a/site/layouts/partials/contact-form.html
+++ b/site/layouts/partials/contact-form.html
@@ -29,6 +29,7 @@
 
     <!-- Button -->
     <div class="ml-3 mb-3">
+      <p class="mb-2">By using this form you agree with the storage and handling of your data by this website.</p>
       <button type="submit" class="text-center p-3 text-4xl bg-primary shadow-lg">Send Message</button>
     </div>
   </form>
