--- a/site/layouts/partials/header.html
+++ b/site/layouts/partials/header.html
@@ -37,7 +37,7 @@
       {{ .Site.Params.description }}
     </p>
 
-    <div class="w-full flex flex-wrap border-b border-solid border-white pb-20 mb-20">
+    <div class="trio w-full flex flex-wrap border-b border-solid border-white pb-20 mb-20">
       <ul class="w-1/2 md:w-1/3 lg:w-1/5 normal-case mb-3 md:mb-0">
         <h4 class="uppercase font-semibold mb-2">brands we bake with:</h4>
         {{ range .Site.Menus.brands }}
@@ -56,7 +56,8 @@
       </ul>
     </div>
 
-    <h2 class="text-4xl normal-case mb-10">Featured Projects</h2>
+    <div class="menu-projects">
+      <h2 class="text-4xl normal-case mb-10">Featured Projects</h2>
       {{ range where site.RegularPages "Section" "work" | first 5 }}
       <a href="{{.Permalink}}">
         <div class="flex flex-wrap normal-case border-t border-solid border-white py-5 hover:bg-aqua hover:text-gray-900">
@@ -72,6 +73,8 @@
         </div>
       </a>
       {{ end }}
+    </div>
+
 	</div>
 </div>
 
