--- a/site/layouts/work/list.html
+++ b/site/layouts/work/list.html
@@ -5,8 +5,8 @@
     {{ $paginator := .Paginate (where site.RegularPages "Section" "work") }}
     {{ range $paginator.Pages }}
 
-      <a href="{{.Permalink}}" class="tile bg-aqua w-full md:w-1/2 2xl:w-1/3 p-1">
-        <div class="h-80 2xl:h-96 relative group bg-aqua overflow-hidden">
+      <a href="{{.Permalink}}" class="tile w-full md:w-1/2 2xl:w-1/3 p-1">
+        <div class="h-80 2xl:h-96 relative group bg-aqua overflow-hidden bg-aqua">
           <div class="text-white overlay-text z-20 opacity-0 group-hover:opacity-100 transition-all text-4xl mix-blend-difference text-center leading-none">
             {{ .Title }}
           </div>
