--- a/site/layouts/partials/header.html
+++ b/site/layouts/partials/header.html
@@ -29,7 +29,7 @@
 
 		<ul class="nav__list text-8xl md:text-9xl italic font-semibold leading-tight pb-20">
       {{ range .Site.Data.navigation.nav }}
-        <li class="nav__list-item"><a href="{{ .URL | absURL }}">{{ .name }}</a></li>
+        <li class="nav__list-item"><a href="{{ .URL | absURL }}">{{ .label }}</a></li>
       {{ end }}
 		</ul>
 
@@ -41,13 +41,13 @@
       <ul class="w-1/2 md:w-1/3 lg:w-1/5 normal-case mb-3 md:mb-0">
         <h4 class="uppercase font-semibold mb-2">brands we bake with:</h4>
         {{ range .Site.Data.navigation.brands }}
-          <li class="mb-2">{{ .name }}</li>
+          <li class="mb-2">{{ .label }}</li>
         {{ end }}
       </ul>
       <ul class="w-1/2 md:w-1/3 lg:w-1/5 normal-case">
         <h4 class="uppercase font-semibold mb-2">services:</h4>
         {{ range .Site.Data.navigation.services }}
-          <li class="mb-2">{{ .name }}</li>
+          <li class="mb-2">{{ .label }}</li>
         {{ end }}
       </ul>
       <ul class="w-1/2 md:w-1/3 lg:w-1/5 normal-case">
