--- a/site/layouts/work/list.html
+++ b/site/layouts/work/list.html
@@ -5,14 +5,16 @@
     {{ $paginator := .Paginate (where site.RegularPages "Section" "work") }}
     {{ range $paginator.Pages }}
 
-      <a href="{{.Permalink}}" class="tile w-full md:w-1/2 2xl:w-1/3 p-1">
+      <a href="{{.Permalink}}" class="tile w-full md:w-1/2 2xl:w-1/3 p-1 group">
         <div class="h-80 2xl:h-96 relative group bg-aqua overflow-hidden bg-aqua">
           <div class="text-white overlay-text z-20 opacity-0 group-hover:opacity-100 transition-all text-4xl mix-blend-difference text-center leading-none">
             {{ .Title }}
           </div>
-          <img src="{{ .Params.image }}" class="object-cover w-full h-full" alt="">
+          {{ if .Params.image }}
+            <img src="{{ .Params.image }}" class="object-cover w-full h-full duration-1000 ease-in-out transform group-hover:scale-105" alt="">
+          {{ end }}
           {{ if .Params.thumbnailVideo }}
-            <video autoplay muted loop id="myVideo" class="thumbnail-video z-10">
+            <video autoplay muted loop class="object-cover w-full h-full duration-1000 ease-in-out transform group-hover:scale-105">
               <source src="{{ .Params.thumbnailVideo }}" type="video/mp4">
             </video>
           {{ end }}
