varius updates and tweaking

--- a/site/layouts/partials/job-app.html
+++ b/site/layouts/partials/job-app.html
@@ -25,7 +25,7 @@
         <input type="file" name="resume" class="w-full bg-transparent pt-1"/>
       </div>
       <!-- Role -->
-      <div class="w-full border-b border-l border-solid border-gray-900 dark:border-white p-3">
+      <div class="w-full border-b border-solid border-gray-900 dark:border-white p-3">
         <label for="role" class="uppercase font-semibold">Role</label>
         <input type="text" name="role" placeholder="Which role are you applying for?" class="w-full bg-transparent pt-1"/>
       </div>
@@ -39,7 +39,7 @@
 
     <!-- Button -->
     <div class="ml-3 mb-3">
-      <p class="mb-2 normal-case">By using this form you agree with the storage and handling of your data by this website.</p>
+      <p class="mb-2 normal-case text-xs">By using this form you agree with the storage and handling of your data by this website.</p>
       <button type="submit" class="text-center p-3 text-4xl bg-primary shadow-lg">Send Message</button>
     </div>
   </form>
