--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -2,13 +2,13 @@
   <div class="flex flex-wrap w-full p-2">
 
     <div class="w-full lg:w-3/4">
-      <div id="auto-feed" class="grid animate__animated animate__fadeIn grid-cols-3 auto-rows-max gap-2 text-white">
+      <div id="auto-feed" class="grid grid-cols-3 auto-rows-max gap-2 text-white animate__animated animate__fadeIn mb-2">
 
         {{ $paginator := .Paginate (where site.RegularPages "Section" "work") }}
         {{ range $paginator.Pages }}
 
           <a href="{{ .Permalink }}" class="tile bg-aqua overflow-hidden cursor-pointer group relative">
-            <div class="overlay-text z-20 opacity-0 group-hover:opacity-100 transition-all text-4xl mix-blend-difference text-center leading-none">
+            <div class="overlay-text z-20 opacity-0 group-hover:opacity-100 transition-all mix-blend-difference text-center w-full p-2 leading-none">
               {{ .Title }}
             </div>
             {{ if .Params.image }}
@@ -29,7 +29,7 @@
     </div>
 
     <div class="w-full lg:w-1/4">
-      <div id="instafeed-container" class="pl-2"></div>
+      <div id="instafeed-container" class="lg:pl-2 animate__animated animate__fadeIn"></div>
     </div>
 
   </div>
@@ -49,7 +49,7 @@
       resolution: 'low_resolution',
       limit: 8,
       accessToken: 'IGQVJWQXhEeGZAZAaFJUMXpJWFJ1NTNjWjRVUS01R0JuY00xMm15cm1TRTZAiWVp0ZAGpwZADYzcEZAtelJrRVFLT294d3YxdFVjcU45UjZACS0EyUzFESmlzWk9BQjNoajNTd0JZAY2ZAZAa2ZAfRUd3T2R6UnRPWgZDZD',
-      template: '<a href="{{ "{{link}}" }}" target="_blank"><img title="{{ "{{caption}}" }}" src="{{ "{{image}}" }}" class="pb-2"/></a>',
+      template: '<a href="{{ "{{link}}" }}" target="_blank" class="flex group relative overflow-hidden mb-2 text-white"><div class="overlay-text w-full p-2 instagram z-20 opacity-0 group-hover:opacity-100 transition-all text-base text-center leading-none"><img src="img/insta-mini.svg" class="mx-auto mb-2" alt=""><p class="mix-blend-difference">{{ "{{caption}}" }}</p></div><img class="object-cover w-full h-full duration-1000 ease-in-out transform group-hover:scale-105" src="{{ "{{image}}" }}" class="pb-2"/></a>',
     });
     userFeed.run();
   </script>
