--- a/site/layouts/work/single.html
+++ b/site/layouts/work/single.html
@@ -74,10 +74,19 @@
   </div>
 
   <div class="flex flex-wrap max-w-5xl mx-auto py-10">
-    <h2 class="text-4xl normal-case mb-5 w-full">Recent Projects</h2>
-    {{ range where site.RegularPages "Section" "work" | first 3 }}
-      <a href="{{.Permalink}}" class="w-1/3 p-1">
-        <div class="h-56 relative" style="background:url({{.Params.image}}); background-size:cover; background-position: center;"></div>
+    <h2 class="text-4xl normal-case mb-5 w-full">More Projects</h2>
+    {{ range first 3 (shuffle (where (where .Site.RegularPages "Section" "work") "Title" "!=" .Title )) }}
+      <a href="{{.Permalink}}" class="w-1/3 p-1 group">
+        <div class="h-56 relative overflow-hidden bg-aqua">
+          {{ if .Params.image }}
+            <img src="{{ .Params.image }}" class="object-cover w-full h-full duration-1000 ease-in-out transform group-hover:scale-105" alt="">
+          {{ end }}
+          {{ if .Params.thumbnailVideo }}
+            <video autoplay muted loop class="object-cover w-full h-full duration-1000 ease-in-out transform group-hover:scale-105">
+              <source src="{{ .Params.thumbnailVideo }}" type="video/mp4">
+            </video>
+          {{ end }}
+        </div>
         <h4 class="py-2">
           {{ .Title }}
         </h4>
