--- a/site/layouts/partials/contact-form.html
+++ b/site/layouts/partials/contact-form.html
@@ -1,6 +1,6 @@
 <!-- Contact -->
 <div class="mb4">
-  <h4 class="text-4xl py-5 normal-case">Fancy a chat?</h4>
+  <h4 class="text-2xl lg:text-4xl py-5 normal-case">How can we help?</h4>
 
   <form name="contact" method="POST" data-netlify="true" class="border border-solid border-gray-900 dark:border-white mb-3">
     <div class="w-full flex flex-wrap mb-2">
