--- a/site/layouts/jobs/single.html
+++ b/site/layouts/jobs/single.html
@@ -1,10 +1,10 @@
 {{ define "main" }}
 
 <div class="animate__animated animate__fadeIn">
-  <div class="max-w-5xl mx-auto pt-20 pb-10 px-5">
+  <div class="max-w-5xl mx-auto pt-20 pb-10 px-2">
 
     <div class="mb-10">
-      <h1 class="text-4xl normal-case">{{.Title}}</h1>
+      <h1 class="text-2xl lg:text-4xl font-semibold normal-case">{{.Title}}</h1>
       <ul class="font-semibold">
         <li>Category: <span class="normal-case font-normal">{{.Params.category}}</span></li>
         <li>Type: <span class="normal-case font-normal">{{.Params.jobType}}</span></li>
