--- a/site/layouts/partials/job-app.html
+++ b/site/layouts/partials/job-app.html
@@ -1,6 +1,6 @@
 <!-- Contact -->
 <div class="mb4">
-  <h4 class="text-4xl py-5 normal-case">Apply for this position</h4>
+  <h4 class="text-2xl lg:text-4xl py-5 normal-case">Apply for this position</h4>
 
   <form name="job-app" method="POST" data-netlify="true" class="border border-solid border-gray-900 dark:border-white mb-3">
     <div class="w-full flex flex-wrap mb-2">
