--- a/site/layouts/section/contact.html
+++ b/site/layouts/section/contact.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 
-<div class="animate__animated animate__fadeIn w-full flex flex-wrap p-1">
+<div class="animate__animated animate__fadeIn w-full flex flex-wrap px-2">
 
 		<div class="max-w-5xl mx-auto py-20 normal-case markdown">
 			{{ .Content }}
