--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -43,10 +43,10 @@ p {
 }
 
 #feed {
-  grid-template-rows: 150px 150px 150px 150px 150px 150px 150px 150px 150px 150px 150px;
+  grid-auto-rows: 150px;
 
   @media (min-width: 1536px) {
-    grid-template-rows: 200px 200px 200px 200px 200px 200px 200px 200px 200px 200px 200px;
+    grid-auto-rows: 200px;
   }
 }
 
@@ -98,10 +98,14 @@ p {
 }
 
 .about-grid {
-  grid-template-rows: 60px 60px 60px 60px 60px 60px 60px 60px 60px;
+  grid-auto-rows: 30px;
+
+  @media (min-width: 1024px) {
+    grid-auto-rows: 60px;
+  }
 
   @media (min-width: 1536px) {
-    grid-template-rows: 80px 80px 80px 80px 80px 80px 80px 80px 80px;
+    grid-auto-rows: 80px;
   }
 }
 
@@ -278,10 +282,18 @@ body.nav-active {
 
 .markdown {
   h2 {
-    @apply uppercase font-semibold pt-5 pb-2 text-4xl;
+    @apply font-semibold pt-5 pb-2 text-2xl;
+
+    @media (min-width: 1024px) {
+      @apply text-4xl;
+    }
   }
   h3 {
-    @apply font-semibold text-2xl;
+    @apply font-semibold text-xl;
+
+    @media (min-width: 1024px) {
+      @apply text-2xl;
+    }
   }
   h4 {
   }
